2007-05-23  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	* codegen/reversewrapper.py (ReverseWrapper.generate): Refactor to
	allow add_pyret_parse_item("", ""), which is used for 'void'
	return type.
	(VoidReturn.write_conversion): Fix bug #440059: Bad check for
	direction "out" parameters with return-type "none".

2007-05-17  Tim Evans  <t.evans@aranz.com>

	Reviewed by: Gustavo Carneiro.

	* codegen/reversewrapper.py (DoubleReturn.write_conversion): Fix
	copy-paste error, and also support the new API that allows parsing
	of multiple return values.  Fixes Bug #439014.

2007-05-07  Richard Hult  <richard@imendio.com>

	* configure.in: Make --disable-docs actually work, OKed by Johan.

2007-05-03  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* tests/test_actiongroup.py,
	* tests/test_gdk.py: Fix unit tests to account for the new memory
	management model in pygobject 2.13.

2007-05-01  Andrew Cowie  <andrew@operationaldynamics.com>

	* gtk/gdk-base.defs: Fix return type of GdkRectangle.union

2007-02-23  Mariano Suarez-Alvarez  <mariano@gnome.org>

	* gtk/gtk-base.defs: Allow None for the string arguments 
	of gtk_rc_get_style_by_paths. (Fixes bug #411412)

2007-02-05  Johan Dahlin  <jdahlin@async.com.br>

	* configure.in: Post release version bump

=== 2.10.4 ===
2007-02-05  Johan Dahlin  <jdahlin@async.com.br>

	* NEWS: 
	
	2.10.4

2007-01-31  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtk/gtkcontainer.override: Fix a possible memory leak in
	gtk.Container.child_get() (Fixes bug #404076)

2007-01-31  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gtkcontainer.override (_wrap_gtk_container_class_list_child_properties): Undeprecate

2007-01-20  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gtk/gdk.override (_wrap_gdk_display_close): Force keeping of a
	reference to the display GObject even when we close() it.

	* tests/test_gdk.py (GdkTest.testDisplay): Johan's unit test with
	minor modifications.
