@@ -1,3 +1,9 @@
+2007-06-11  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>
+
+	* codegen/reversewrapper.py (ReverseWrapper.generate): Special
+	case when only a single void return value exists; fix the return
+	value type checking in this case.
+
 2007-05-23  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>
 
 	* codegen/reversewrapper.py (ReverseWrapper.generate): Refactor to
